--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 				<header id="header">
 					<div class="logo container">
 						<div>
-							<h1><a href="index.html" id="logo">TXT</a></h1>
-							<p>A responsive site template by HTML5 UP</p>
+							<h1><a href="index.html" id="logo">Sunrise Maintenance Ltd.</a></h1>
+							<p>Maintenance and cleaning company.</p>
 						</div>
 					</div>
 				</header>
@@ -29,33 +29,33 @@
 					<ul>
 						<li class="current"><a href="index.html">Home</a></li>
 						<li>
-							<a href="#">Dropdown</a>
+							<a href="#">Services</a>
 							<ul>
-								<li><a href="#">Lorem ipsum dolor</a></li>
-								<li><a href="#">Magna phasellus</a></li>
+								<li><a href="#">Request a quote</a></li>
+								<li><a href="#">Trash Maintenance</a></li>
 								<li>
-									<a href="#">Phasellus consequat</a>
+									<a href="#">Commercial Cleaning</a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Phasellus consequat</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
+										<li><a href="#">Interior Cleaning</a></li>
+										<li><a href="#">Exterior and Lot</a></li>
+										<li><a href="#">Kitchen Maintenance</a></li>
+										<li><a href="#">Others</a></li>
 									</ul>
 								</li>
-								<li><a href="#">Veroeros feugiat</a></li>
+								
 							</ul>
 						</li>
-						<li><a href="left-sidebar">Left Sidebar</a></li>
-						<li><a href="right-sidebar.html">Right Sidebar</a></li>
-						<li><a href="no-sidebar.html">No Sidebar</a></li>
+						<li><a href="#">About Us</a></li>
+						<li><a href="#">Contact Us</a></li>
+						
 					</ul>
 				</nav>
 
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content">
-						<h2>Welcome to TXT by HTML5 UP</h2>
-						<p>A free responsive site template built on HTML5, CSS3, and some other stuff</p>
+						<h2>Welcome to Sunrise Maintenance Ltd.</h2>
+						<p>Maintenance and cleaning for the Greater Vancouver area.</p>
 						<a href="#main" class="button scrolly">Alright let's go</a>
 					</div>
 				</section>
@@ -89,7 +89,7 @@
 
 								<!-- Features -->
 									<section class="box features">
-										<h2 class="major"><span>A Major Heading</span></h2>
+										<h2 class="major"><span>Our Services</span></h2>
 										<div>
 											<div class="row">
 												<div class="col-3 col-6-medium col-12-small">
@@ -97,10 +97,9 @@
 													<!-- Feature -->
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-															<h3><a href="#">A Subheading</a></h3>
+															<h3><a href="#">Request a Quote</a></h3>
 															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
+																Reach out to us with the details of the job and we’ll get back to you with a quote. 
 															</p>
 														</section>
 
@@ -110,10 +109,9 @@
 													<!-- Feature -->
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-															<h3><a href="#">Another Subheading</a></h3>
+															<h3><a href="#">Commercial cleaning</a></h3>
 															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
+																Our dedicated staff can keep your office or restaurant clean and neat for your staff to enjoy.
 															</p>
 														</section>
 
@@ -123,10 +121,10 @@
 													<!-- Feature -->
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-															<h3><a href="#">And Another</a></h3>
+															<h3><a href="#">Trash Maintenance</a></h3>
 															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
+																Trash can be tough to deal with-especially when things become messy.
+																 Clean Habitat can arrange scheduled waste and recycling removal for your building. 
 															</p>
 														</section>
 
@@ -136,10 +134,9 @@
 													<!-- Feature -->
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-															<h3><a href="#">And One More</a></h3>
+															<h3><a href="#">Learn More</a></h3>
 															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
+																Learn more about our company.
 															</p>
 														</section>
 
