--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 													<!-- Feature -->
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images/pic0.jpg" alt="" /></a>
-															<h3><a href="#">Request a Quote</a></h3>
+															<h3><a href="/contact.html">Request a Quote</a></h3>
 															<p>
 																Interested with what we offer? Contact us with the details of the job and we’ll get back to you with a quote. 
 															</p>
@@ -100,7 +100,7 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic4.jpg" alt="" /></a>
+															<a href="/services.html#interior" class="image featured"><img src="images/pic4.jpg" alt="" /></a>
 															<h3><a href="#">Commercial and Residential cleaning</a></h3>
 															<p>
 																We have dedicated staff that will keep your building or home clean and tidy. We offer both interior and extrior services to make sure everything is spotless from kitchen to the lot!
@@ -114,7 +114,7 @@
 													<!-- Feature -->
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images/pic3.jpg" alt="" /></a>
-															<h3><a href="#">Trash Maintenance</a></h3>
+															<h3><a href="/services.html#trash">Trash Maintenance</a></h3>
 															<p>
 																 We can arrange scheduled recycling and waste removal for your office or restaurant. 
 															</p>
@@ -125,7 +125,7 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic2.jpg" alt="" /></a>
+															<a href="/about.html" class="image featured"><img src="images/pic2.jpg" alt="" /></a>
 															<h3><a href="#">Learn More</a></h3>
 															<p>
 																Learn more about Sunrise Maintenance and the team behind it.
