--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
 
 							</div>
 							<div class="col-12">
-								<form method="POST" action="https://formspree.io/xeqoqqov">
+								<form method="POST" action="https://formspree.io/xpzqlzvk">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
