--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 					<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
-								<a href="#">Services</a>
+								<a href="services.html">Services</a>
 								<ul>
 									<li><a href="contact.html">Request a quote</a></li>
 									<li><a href="services.html#trash">Trash Maintenance</a></li>
