--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<ul>
 						<li class="current"><a href="index.html">Home</a></li>
 						<li>
-							<a href="#">Services</a>
+							<a href="services.html">Services</a>
 							<ul>
 								<li><a href="contact.html">Request a quote</a></li>
 								<li><a href="services.html#trash">Trash Maintenance</a></li>
@@ -88,7 +88,7 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="/contact.html" class="image featured"><img src="images/pic0.jpg" alt="" /></a>
+															<a href="/contact.html" class="image featured"><img src="images/pic0.jpg" alt="Request a quote, image with a notepad and a pen" /></a>
 															<h3><a href="/contact.html">Request a Quote</a></h3>
 															<p>
 																Interested with what we offer? Contact us with the details of the job and we’ll get back to you with a quote. 
@@ -100,7 +100,7 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="/services.html#interior" class="image featured"><img src="images/pic4.jpg" alt="" /></a>
+															<a href="/services.html#interior" class="image featured"><img src="images/pic4.jpg" alt="Vacuumming glittery mess off a light brown carpet" /></a>
 															<h3><a href="/services.html#interior">Commercial and Residential cleaning</a></h3>
 															<p>
 																We have dedicated staff that will keep your building or home clean and tidy. We offer both interior and extrior services to make sure everything is spotless from kitchen to the lot!
@@ -113,7 +113,7 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="/services.html#trash" class="image featured"><img src="images/pic3.jpg" alt="" /></a>
+															<a href="/services.html#trash" class="image featured"><img src="images/pic3.jpg" alt="Garbage bin outside next to water drain" /></a>
 															<h3><a href="/services.html#trash">Trash Maintenance</a></h3>
 															<p>
 																 We can arrange scheduled recycling and waste removal for your office or restaurant. 
@@ -125,7 +125,7 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="/about.html" class="image featured"><img src="images/pic2.jpg" alt="" /></a>
+															<a href="/about.html" class="image featured"><img src="images/pic2.jpg" alt="Broom and dustpan leaning over a wall outside the street" /></a>
 															<h3><a href="/about.html">Learn More</a></h3>
 															<p>
 																Learn more about Sunrise Maintenance and the team behind it.
@@ -141,35 +141,7 @@
 							</div>
 							<div class="col-12">
 
-								<!-- Blog 
-									<section class="box blog">
-										<h2 class="major"><span>Another Major Heading</span></h2>
-										<div>
-											<div class="row">
-												<div class="col-9 col-12-medium">
-													<div class="content"> -->
-
-														<!-- Featured Post 
-															<article class="box post">
-																<header>
-																	<h3><a href="#">Here's a really big heading</a></h3>
-																	<p>With a smaller subtitle that attempts to elaborate</p>
-																	<ul class="meta">
-																		<li class="icon fa-clock">15 minutes ago</li>
-																		<li class="icon fa-comments"><a href="#">8</a></li>
-																	</ul>
-																</header>
-																<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-																<p>
-																	Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in lectus. Praesent
-																	semper mod quis eget mi. Etiam sed ante risus aliquam erat et volutpat. Praesent a
-																	dapibus velit. Curabitur sed nisi nunc, accumsan vestibulum lectus. Lorem ipsum
-																	dolor sit non aliquet sed, tempor et dolor. Praesent a dapibus velit. Curabitur
-																	accumsan.
-																</p>
-																<a href="#" class="button">Continue Reading</a>
-															</article>
-														-->
+								
 													</div>
 												</div>
 												
