--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 					<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
-								<a href="#">Services</a>
+								<a href="services.html">Services</a>
 								<ul>
 									<li><a href="contact.html">Request a quote</a></li>
 									<li><a href="services.html#trash">Trash Maintenance</a></li>
@@ -86,7 +86,7 @@
 														<Featured Post 
 															<article class="box post">
 																
-																<a href="#" class="image left2"><img src="images/mopic.jpg" alt="" /></a>
+																<a href="#" class="image left2"><img src="images/mopic.jpg" alt="Founder Picture: Mohammed Fareeq" /></a>
 																<p>
 																	Recently founded by Mohammed Fareeq, Sunrise Maintenance Ltd. has come a long way from its beginnings in Vancouver. When Mohammed first started out, his drive for exceeding standards drove them to start their own business.
 
